force-app/main/default/objects/Bot_Registration__c/Bot_Registration__c.object-meta.xml
<CustomObject>
    <description>Uses to store information about a particular bot registration</description>
    <label>Bot Registration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>