force-app/main/default/objects/Bot_Registration__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <description>Id of the group that is responsible for maintaining the VK bot</description>
    <inlineHelpText>Id of the group that is responsible for maintaining the VK bot</inlineHelpText>
    <label>Group Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>