force-app/main/default/objects/Bot_Registration__c/fields/Hashed_Token__c.field-meta.xml
<CustomField>
    <fullName>Hashed_Token__c</fullName>
    <description>Hash value of a bot token</description>
    <inlineHelpText>Hash value of a bot token</inlineHelpText>
    <label>Hashed Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>