force-app/main/default/objects/Bot_Registration__c/fields/Notify_On_Error__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_Error__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Notify the user about errors through their email address?</description>
    <inlineHelpText>Notify the user about errors through their email address?</inlineHelpText>
    <label>Notify On Error</label>
    <type>Checkbox</type>
</CustomField>