force-app/main/default/objects/Bot_Registration__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>System of a Bot you want to register for</description>
    <inlineHelpText>System of a Bot you want to register for</inlineHelpText>
    <label>System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telegram</fullName>
            </value>
            <value>
                <fullName>VK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>