force-app/main/default/objects/Bot_Registration__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Token uses to identify the bot</description>
    <inlineHelpText>Token uses to identify the bot</inlineHelpText>
    <label>Token</label>
    <length>80</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>