force-app/main/default/objects/Bot_Registration__c/fields/WebHook_Path__c.field-meta.xml
<CustomField>
    <fullName>WebHook_Path__c</fullName>
    <description>Path on the org for setting webhooks for a bot</description>
    <inlineHelpText>Path on the org for setting webhooks for a bot</inlineHelpText>
    <label>WebHook Path</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>