force-app/main/default/objects/Bot_Registration__c/fields/WebHook_Server_Id__c.field-meta.xml
<CustomField>
    <fullName>WebHook_Server_Id__c</fullName>
    <description>Id of the webhook server registered for VK bot</description>
    <inlineHelpText>Id of the webhook server registered for VK bot</inlineHelpText>
    <label>WebHook Server Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>