force-app/main/default/objects/Bot_Registration__c/recordTypes/General_Messanger.recordType-meta.xml
<RecordType>
    <fullName>General_Messanger</fullName>
    <active>true</active>
    <description>The general Record Type for the messangers like Telegram, Viber, WhatsApp</description>
    <label>General Messanger</label>
</RecordType>