force-app/main/default/objects/Bot_Registration__c/recordTypes/VK.recordType-meta.xml
<RecordType>
    <fullName>VK</fullName>
    <active>true</active>
    <description>Record Type for the VK social network</description>
    <label>VK</label>
</RecordType>