force-app/main/default/objects/Bot_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>WebHook_Path__c</columns>
    <columns>Notify_On_Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>